# harness

./: .gitignore  README.md  demo-video-script.md  pyproject.toml
benchmarks/: coding_tasks.json
coding_agent/: __init__.py  cli.py  context_manager.py  evaluator.py  memory.py  metrics.py  models.py  runtime.py  tools.py  workspace.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_coding_agent.py  test_context_manager.py  test_evaluator.py  test_memory.py  test_metrics.py  test_run_store.py  test_safety_invariants.py  test_task_state.py
